2025-01-21  Zhengyi Fu  <i@fuzy.me>

	* init.el (+vc/dir-here): New command.  Bound to `C-c v .'.

2025-01-20  Zhengyi Fu  <i@fuzy.me>

	* init.el (markdown-mode): Enable visual-line-mode.

	* early-init.el (default-frame-alist): Do not set
	`alpha-background' any more.

	* site-lisp/rust-docs.el (rust-docs--get-file):
	(rust-docs--base-path):
	(rust-docs--shr-tag-pre):
	(rust-docs--render):
	* site-lisp/gtkdoc.el (gtkdoc--parse-xml):
	(gtkdoc--extract-symbols):
	(gtkdoc--shr-tag-pre):
	(gtkdoc--render):
	* site-lisp/backup.el (backup-list-default-format-entry-function):
	Use `with-temp-buffer' instead of `with-work-buffer'.

	* site-lisp/compat+.el:
	* site-lisp/keymap+.el: Removed.

	* init.el: Bind <f5> to `project-recompile'.
	Enable color emoji when using Xft.

2025-01-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (p-search): Fix loading error.

2025-01-16  Zhengyi Fu  <i@fuzy.me>

	* init.el: Remove custom keybinding for C-x C-c.

2025-01-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (mm-discouraged-alternatives): Set value of
	`mm-discouraged-alternatives' directly.
	(meow-setup): Set `meow-use-clipboard' to t.  Customize
	`meow-mode-state-list'.
	(tab-bar-tab-name-format-function): Better format for tab names.

	* site-lisp/outline2org.el: New file.

2025-01-13  Zhengyi Fu  <i@fuzy.me>

	* packages.el (p-search): Fix recipe.

	* init.el: Enable `ultra-scroll-mode' if xinput2 is available.
	Set dired-do-revert-buffer to t.

	* packages.el: Add package `ultra-scroll'.

	* init.el: Set font of default face.
	(toggle-map): Bind `w' to `whitespace-mode'.
	(server-after-make-frame-hook): Add `+custom-fontset'.

	* early-init.el (default-frame-alist): Remove `font', `width' and
	`height'.

2025-01-12  Zhengyi Fu  <i@fuzy.me>

	* init.el: Increase `recentf-max-saved-items' to 8192.

2025-01-11  Zhengyi Fu  <zhengyi@fedora>

	* packages.el: Fix recipe of systemd-mode.

2025-01-10  Zhengyi Fu  <i@fuzy.me>

	* init.el (quilt-new-patch, quilt-add-visited-file)